--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,38 @@
     transform: rotate(360deg);
   }
 }
+
+.dates {
+  display: flex;
+}
+.dates h6:nth-child(2) {
+  margin-left: 40px;
+}
+.dates input {
+  display: block;
+}
+
+#incomeType {
+  width: 35%;
+}
+
+.panel {
+  max-width: 100%;
+  height: 300px;
+  overflow-y: scroll;
+  margin-top: 20px;
+}
+
+.chart{
+  margin-top: 20px;
+}
+
+.summaryDiv {
+  display: flex;
+  justify-content: space-between;
+  
+}
+.summaryCard {
+  width: 100px;
+  height: 300px;
+}
