--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-body {
+/* body {
+  background-color: rgb(184, 148, 102);
+  width: 1800px;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,4 +13,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
+
