--- a/src/App.css
+++ b/src/App.css
@@ -32,63 +32,76 @@
   }
 } */
 #root{
-  background-color: rgb(216, 219, 221);
-  width: 90%;
+  background-color: rgb(240, 241, 243);
+  width: 80%;
   height: 100%;
   margin: auto;
 }
 
-.main {
-  padding: 0;
-}
 
 
-
-/* .row {
-  width: 100%;
-  margin: auto;
-} */
 .topMenu{
   margin: auto;
-  width: 80%;
-  margin-top: 10px;
+  /* width: 90%; */
   justify-content: center;
+  margin-top: 5px;
+  margin-bottom: 20px;
 }
 .dates {
-  max-width: 850px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 5px;
   display: flex;
+  justify-content: flex-start;
   font-size: 10px;
 }
-.dates h6:nth-child(2) {
-  margin-left: 40px;
+    @media (max-width: 700px){
+      .dates{
+        display: block;
+        float: right;
+      }
+      .chart{
+        display: none;
+      }
+    }
+
+.dates h6{
+  display: block;
+  
 }
-.dates input {
+.dates button{
+  margin-top: 17px;
+  height: 40px;
+width: 240px;
+  text-align: center;
+  letter-spacing: 8px;
+}
+.dates input  {
+  margin-right: 40px;
   display: block;
   height: 40px;
-  width: 280px;
-  
+  width: 240px;
 }
 
 .incomeType {
   width: 73%;
   height: 40px;
-  margin-bottom: 30px;
+}
+.topMenuHeader{
+  margin: 20px 0;
 }
 .content{
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 .panel {
   max-width: 100%;
-  height: 300px;
+  height: 385px;
   overflow-y: scroll;
-  margin-top: 20px;
+  /* margin-top: 20px; */
+  padding: 0 40px;
 }
 
 .chart{
-  margin-top: 20px;
+  margin-top: 10px;
   font-size: 14px;
 }
 
@@ -98,23 +111,38 @@
   
 } */
 .summaryCard {
-  margin-top:30px;
-  width: 230px;
-  height: 200px;
+  width: 100%;
+  height: 210px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  flex-direction: column;
+  
 }
 
 .cardTitle{
   font-size: 16px;
+  margin-top: -25px;
+  align-self: flex-start;
 }
 .cardSubtitle{
-  font-size: 24px;
+  font-size: 26px;
+  font-weight: 700;
+  align-self: center;
 }
 .cardText{
   font-size: 18px;
+  align-self: flex-start;
 }
 .tabMenu{
-  position: fixed;
+  /* position: fixed; */
+  margin-top: 40px;
+  margin-bottom: 20px;
   bottom: 0;
+}
+
+.rightPanelData{
+  text-align: right;
+}
+.footerBox{
+  margin-top: 5px;
 }
