--- a/src/App.css
+++ b/src/App.css
@@ -31,18 +31,46 @@
     transform: rotate(360deg);
   }
 } */
-#root{
-  background-color: rgb(240, 241, 243);
-  width: 80%;
-  height: 100%;
-  margin: auto;
+body{
+  background: rgb(230, 230, 230);
+
 }
+#root{
+  font-family: 'Quicksand', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 500;
+  background: rgb(230, 230, 230);
+  /* background-size: cover; */
+  /* width: 100%;
+  height: 150%; */
+  margin: auto;
+  display: block;
+  position: relative;
+}
+#root::after{
+  content: "";
+  background: url('./img/ales-krivec-20582-unsplash.jpg');
+  opacity: 0.5;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1; 
+}
+
+/* .main container{
+  background-color: hsla(220, 63.2, 49, 0.5);
+  background-color: transparent;
+  max-width: 1200px;
+} */
 
 
 
 .topMenu{
   margin: auto;
-  /* width: 90%; */
+  font-weight: 700;
   justify-content: center;
   margin-top: 5px;
   margin-bottom: 20px;
@@ -50,18 +78,10 @@
 .dates {
   margin-top: 5px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   font-size: 10px;
 }
-    @media (max-width: 700px){
-      .dates{
-        display: block;
-        float: right;
-      }
-      .chart{
-        display: none;
-      }
-    }
 
 .dates h6{
   display: block;
@@ -70,7 +90,7 @@
 .dates button{
   margin-top: 17px;
   height: 40px;
-width: 240px;
+  width: 240px;
   text-align: center;
   letter-spacing: 8px;
 }
@@ -88,40 +108,106 @@ width: 240px;
 .topMenuHeader{
   margin: 20px 0;
 }
-.content{
-  /* overflow-y: scroll; */
-}
+
 
 .panel {
   max-width: 100%;
   height: 385px;
   overflow-y: scroll;
+  display: flex;
+  justify-content: space-around;
   /* margin-top: 20px; */
-  padding: 0 40px;
+  padding: 0 30px;
 }
 
 .chart{
+  width: 100%;
   margin-top: 10px;
   font-size: 14px;
 }
 
-/* .summaryContent {
-  display: flex;
-  justify-content: space-between;
-  
-} */
-.summaryCard {
-  width: 100%;
-  height: 210px;
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  
+.chartTooltip{
+  background-color: gray;
 }
 
+.summaryContent {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  
+}
+.footerBox {
+  margin-top: 10px;
+  width: 285px;
+}
+
+.summaryCard {
+  margin-top: 10px;
+  width: 255px;
+  height: 210px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: wrap;
+  
+}
+@media (min-width: 501px) and (max-width: 1540px) {
+  #root {
+    /* width: 100%; */
+  }
+  .summaryContent {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+  }
+  .summaryCard{
+      display: flex;
+      justify-content: space-between;
+    }
+    .footerBox{
+      min-width: 285px;
+      align-self: flex-end;
+    }
+  }
+  @media (max-width: 770px){
+    #root{
+      width: 100%;
+    }
+    .dates{
+      display: block;
+      /* float: right; */
+    }
+    .col-chart{
+      display: none;
+    }
+    .summaryCard{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    .footerBox{
+      min-width: 385px;
+      align-self: flex-end;
+    }
+  }
+  @media (max-width: 500px) {
+    #root {
+      width: 100%;
+    }
+    .summaryCard{
+      display: flex;
+      justify-content: space-between;
+      max-width: 300px;
+    }
+    .footerBox{
+      width: 450px;
+    }
+  }
+
 .cardTitle{
-  font-size: 16px;
-  margin-top: -25px;
+  font-size: 18px;
+  /* margin-top: -25px; */
   align-self: flex-start;
 }
 .cardSubtitle{
@@ -130,8 +216,16 @@ width: 240px;
   align-self: center;
 }
 .cardText{
-  font-size: 18px;
-  align-self: flex-start;
+  margin-bottom: -20px;
+  font-size: 16px;
+  display: flex;
+  justify-content: space-between;
+  /* align-self: baseline; */
+}
+.cardText-cardSubtitle {
+  font-size: 22px;
+  font-weight: 600;
+  /* align-self: flex-end; */
 }
 .tabMenu{
   /* position: fixed; */
@@ -142,7 +236,5 @@ width: 240px;
 
 .rightPanelData{
   text-align: right;
-}
-.footerBox{
-  margin-top: 5px;
+  text-overflow: clip;
 }
