--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,15 @@
-/* body {
+body {
   background-color: rgb(184, 148, 102);
-  width: 1800px;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Quicksand', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-} */
+  font-family: 'Quicksand', sans-serif;
+}
 
